--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "axios": "^1.10.0",
     "express": "^4.18.2",
     "zod": "^3.23.8"
   },
